k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doc-manager-ingress
  namespace: react
spec:
  rules:
  - host: doc-manager.giuliohome.local # minikube ip in hosts
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: doc-manager-service
            port:
              number: 80
  ingressClassName: nginx
